--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
-    "nodemon": "^1.7.3"
+    "nodemon": "^1.7.3",
+    "pg": "^4.4.3"
   }
 }
