--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
+    "cookie-parser": "^1.4.0",
+    "express-session": "^1.11.2",
+    "connect-flash": "^0.1.1",
+    "body-parser": "^1.14.1",
     "nodemon": "^1.7.3",
     "pg": "^4.4.3"
   }
