--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.2",
     "nodemon": "^1.7.3",
-    "pg": "^4.4.3"
+    "pg": "^4.4.3",
+    "body-parser": "^1.14.1"
   }
 }
