--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
+    "body-parser": "^1.14.1",
     "connect-flash": "^0.1.1",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.2",
+    "multer": "^1.1.0",
     "nodemon": "^1.7.3",
-    "pg": "^4.4.3",
-    "body-parser": "^1.14.1"
+    "pg": "^4.4.3"
   }
 }
